--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "g": "^2.0.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "webpack"
+    "start": "webpack"
   },
   "author": "",
   "license": "ISC"
