--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,3 @@
 {
-  "presets": [
-    ["env", "react", {
-      "targets": {
-        "browsers": ["last 2 versions", "safari >= 7"]
-      }
-    }]
-  ]
+  "presets": ["env", "react"]
 }
