--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "browserlist": "^1.0.1",
+    "browserslist": "^4.5.5",
     "css-loader": "^3.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.11.1",
+    "normalize-css": "^2.3.1",
+    "optimize-js-plugin": "0.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "style-loader": "^0.23.1",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.4",
     "stylelint-prettier": "^1.0.6",
-    "browserlist": "^1.0.1",
-    "browserslist": "^4.5.5",
-    "normalize-css": "^2.3.1",
-    "http-server": "^0.11.1"
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
