--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "optimize-js-plugin": "0.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.11.1",
     "style-loader": "^0.23.1",
     "stylelint-prettier": "^1.0.6",
     "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.4"
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --env production",
+    "start": "webpack-dev-server --hot --env development",
     "server": "http-server",
     "init-project": "npm install && npm-run-all init:*",
     "browsersync": "browser-sync start --server  --files css/*.css *.html"
